<resources>
    <string name="app_name">Eventhunt</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="fast_search">Быстрый поиск</string>
    <string name="advanced_search">Расширенный поиск</string>
    <string name="add_event">Добавить событие</string>
    <string name="my_events">Мои события</string>
    <string name="my_filters">Мои фильтры</string>
    <string name="setting">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_event">Введите тип мероприятия:</string>
    <string name="choice_genre">Выберите жанр</string>
    <string name="sb_time_title">Начало в течении</string>
    <string name="sb_cost_title">Билеты до</string>
    <string name="find">Найти</string>

    <!-- string const of InfoEventFragment -->
    <string name="info_box_time">Начало</string>
    <string name="info_box_cost">Билеты от</string>

</resources>
