<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/fast_search" />
        <item
            android:id="@+id/nav_adv_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/advanced_search"/>
        <item
            android:id="@+id/nav_add_event"
            android:icon="@drawable/ic_add_event_black"
            android:title="@string/add_event"/>
        <item
            android:id="@+id/nav_my_events"
            android:icon="@drawable/ic_add_event_black"
            android:title="@string/my_events" />
        <item
            android:id="@+id/nav_my_filters"
            android:icon="@drawable/ic_filter_black"
            android:title="@string/my_filters"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/setting"/>
    </group>

</menu>